list and pictures

--- a/hello.html
+++ b/hello.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <title>My webpage</title>
 </head>
-<body>
+    <body>
+        An unordered list:
+        <ul>
+            <li>One item</li>
+            <li>Another</li>
+            <li>etc</li>
+        </ul>
+        Ordered list:
+        <ol>
+            <li>First</li>
+            <li>Second</li>
+        </ol>
 
-Hello world! New hello. Third! Hello hello hello
+    <h1>Largest headline</h1>
+    <h2>Title 2</h2>
+        Hello world! New hello. Third! Hello hello hello.
+    <img src="Osma.jpg" width="20%">
 
-</body>
+    </body>
 </html>
