changed Osma for Watson

--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
     <h1>Largest headline</h1>
     <h2>Title 2</h2>
         Hello world! New hello. Third! Hello hello hello.
-    <img src="Osma.jpg" width="20%">
+    <img src="Watson.jpg" width="20%">
 
     </body>
 </html>
