instead of including style in html, refer to a stylesheet

--- a/style2.html
+++ b/style2.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>My web page!</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-$END$
+    <h1>Welcome to My Web Page!</h1>
+    <p> Hello, world! This is a paragraph of text.</p>
+    <p> Another one!</p>
 </body>
 </html>
