different changes playing with styles

--- a/hello.html
+++ b/hello.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>My webpage</title>
+
+    <style>
+    div {
+        background-color:#caeffa;
+        width: 500px;
+        height: 400px;
+        margin: 30px;
+        padding: 20px;
+    }
+    </style>
+    <link rel="stylesheet" href="styles.css">
+
+
 </head>
-    <body>
+    <p>
+    <div>
         An unordered list:
         <ul>
             <li>One item</li>
@@ -17,10 +31,11 @@
             <li>Second</li>
         </ol>
 
+
     <h1>Largest headline</h1>
     <h2>Title 2</h2>
         Hello world! New hello. Third! Hello hello hello.
-    <img src="Watson.png" width="20%">
+        <p><img src="Watson.png" width="20%"></div></p>
 
     </body>
 </html>
