--- a/hello.html
+++ b/hello.html
@@ -7,10 +7,13 @@
     <style>
     div {
         background-color:#caeffa;
-        width: 500px;
+        width: 375px;
         height: 400px;
         margin: 30px;
         padding: 20px;
+        font-family: Arial, sans-serif;
+        font-size: 16;
+        font-weight: bold;
     }
     </style>
     <link rel="stylesheet" href="styles.css">
