--- a/hello.html
+++ b/hello.html
@@ -14,6 +14,7 @@
         font-family: Arial, sans-serif;
         font-size: 16;
         font-weight: bold;
+        border: 5px solid #205164;
     }
     </style>
     <link rel="stylesheet" href="styles.css">
