--- a/table.html
+++ b/table.html
@@ -3,6 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Presidents table</title>
+    <style>
+        table {
+            border: 2px solid #205164;
+            border-collapse: collapse;
+
+        }
+
+        th, td {
+            border: 1px solid #006d40;
+            padding: 5px;
+            text-align: center;
+            font-family: Garamond, Arial, sans-serif;
+            font-size: 20;
+
+        }
+
+        th {
+            background-color: #AED1CE;
+            font-weight: bold;
+            }
+
+    </style>
 </head>
 <body>
 <h1>Presidents</h1>
@@ -21,6 +43,11 @@
         <td>John</td>
         <td>Adams</td>
         <td>1797-1881</td>
+    </tr>
+    <tr>
+        <td>Thomas</td>
+        <td>Jefferson</td>
+        <td>1801-1809</td>
     </tr>
 </table>
 
