--- a/div_span.html
+++ b/div_span.html
@@ -13,6 +13,11 @@
         #bottom {
             font-size: 12px;
         }
+        .name {
+            font-weight: bold;
+        }
+
+
     </style>
 </head>
 <body>
