--- a/Lecture_1/index.html
+++ b/Lecture_1/index.html
@@ -7,6 +7,7 @@
 <body>
     Hello, world #2!
     add a new line on feature branch
+    <a href="../Lecture_0/hello.html">Click here!</a>
 
 </body>
 </html>
