link to external link (google)

--- a/Lecture_1/index.html
+++ b/Lecture_1/index.html
@@ -8,6 +8,7 @@
     Hello, world #2!
     add a new line on feature branch
     <a href="../Lecture_0/hello.html">Click here!</a>
+    <a href="https://www.google.ca">Google</a>
 
 </body>
 </html>
