hi-lighting text style

--- a/Lecture_1/index.html
+++ b/Lecture_1/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test website</title>
+        <link rel="stylesheet" href="../Lecture_0/styles.css">
 </head>
 <body>
 <h2>Table of Content</h2>
@@ -17,7 +18,7 @@
     <a href="../Lecture_0/hello.html">Click here!</a>
     <a href="https://www.google.ca">Google</a>
 
-    <h2 id="section1">Section 1</h2>
+    <h1 id="section1">Section 1</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.
