--- a/Lecture_0/form_ex.html
+++ b/Lecture_0/form_ex.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<title>My web page!</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 <head>
     <meta charset="UTF-8">
     <title>Form example</title>
@@ -9,5 +14,11 @@
         <input type="text" placeholder="Full Name" name="name">
         <button>Submit!</button>
     </form>
+    <h1>Largest headline</h1>
+    <h2>Title 2</h2>
+        Hello world! New hello. Third! Hello hello hello.
+        <p><img src="Watson.png" width="20%"></div></p>
+
 </body>
+
 </html>
