created a scss and transformed it in css, then applied it to hello.html

--- a/Lecture_0/hello.html
+++ b/Lecture_0/hello.html
@@ -17,7 +17,7 @@
         border: 5px solid #205164;
     }
     </style>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="variables.css">
 
 
 </head>
